# crbdd

./: .gitignore  .readthedocs.yaml  2026-02-14.ipynb  config.toml  convexity_defects.ipynb  default_schema.sql  documentation.ipynb  gemini-2026-03-23.md  main.py  pyproject.toml  temp.ipynb  test.db  vcut_viz.ipynb
docs/source/: conf.py  index.md
resources/: config.toml  readme.md
src/: add_crown_wkt.py  roadside.py  roadside_test.py  roadside_tst.py  test.py
